--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -1,28 +1,28 @@
 {
-  "name": "erp",
+  "name": "client",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "prefix": "app",
-  "sourceRoot": "apps/erp/src",
+  "sourceRoot": "apps/client/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/erp",
-        "index": "apps/erp/src/index.html",
-        "main": "apps/erp/src/main.ts",
+        "outputPath": "dist/apps/client",
+        "index": "apps/client/src/index.html",
+        "main": "apps/client/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/erp/tsconfig.app.json",
+        "tsConfig": "apps/client/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
           {
             "glob": "**/*",
-            "input": "apps/erp/public"
+            "input": "apps/client/public"
           }
         ],
-        "styles": ["apps/erp/src/styles.scss"],
+        "styles": ["apps/client/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -56,10 +56,10 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "buildTarget": "erp:build:production"
+          "buildTarget": "client:build:production"
         },
         "development": {
-          "buildTarget": "erp:build:development"
+          "buildTarget": "client:build:development"
         }
       },
       "defaultConfiguration": "development"
@@ -67,7 +67,7 @@
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "buildTarget": "erp:build"
+        "buildTarget": "client:build"
       }
     },
     "lint": {
@@ -77,13 +77,13 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/erp/jest.config.ts"
+        "jestConfig": "apps/client/jest.config.ts"
       }
     },
     "serve-static": {
       "executor": "@nx/web:file-server",
       "options": {
-        "buildTarget": "erp:build",
+        "buildTarget": "client:build",
         "port": 4200,
         "spa": true
       }
