--- a/package.json
+++ b/package.json
@@ -23,7 +23,43 @@
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.14.3"
+    "zone.js": "~0.14.3",
+
+    "@angular/cdk": "18.2.12",
+    "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/google-maps": "^18.2.12",
+    "@angular/localize": "^18.2.11",
+    "@angular/material": "^18.2.12",
+    "@angular/material-moment-adapter": "^18.2.12",
+    "@juggle/resize-observer": "^3.4.0",
+    "@ngu/carousel": "^18.0.0",
+    "@ngx-translate/core": "^16.0.3",
+    "@ngx-translate/http-loader": "^16.0.0",
+    "angular-calendar": "^0.31.1",
+    "angular-in-memory-web-api": "^0.18.0",
+    "angular-star-rating": "^7.0.0",
+    "apexcharts": "^3.54.1",
+    "chart.js": "^4.4.6",
+    "core-js": "^3.39.0",
+    "date-fns": "^4.1.0",
+    "echarts": "^5.5.1",
+    "flag-icons": "^7.2.3",
+    "highlight.js": "^11.10.0",
+    "hopscotch": "^0.3.1",
+    "moment": "^2.30.1",
+    "ng-apexcharts": "^1.12.0",
+    "ng2-charts": "^6.0.1",
+    "ng2-file-upload": "^7.0.1",
+    "ngx-color-picker": "^17.0.0",
+    "ngx-echarts": "^18.0.0",
+    "ngx-pagination": "^6.0.3",
+    "ngx-quill": "^26.0.9",
+    "perfect-scrollbar": "^1.5.6",
+    "quill": "^2.0.2",
+    "resize-observer-polyfill": "^1.5.1",
+    "rxjs-compat": "^6.6.7",
+    "tinycolor2": "^1.6.0",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~18.2.0",
@@ -71,6 +107,14 @@
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+
+    "@types/jasmine": "~4.0.0",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0"
   }
 }
