--- a/package.json
+++ b/package.json
@@ -8,37 +8,33 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~18.2.0",
+    "@angular/cdk": "18.2.12",
     "@angular/common": "~18.2.0",
     "@angular/compiler": "~18.2.0",
     "@angular/core": "~18.2.0",
-    "@angular/forms": "~18.2.0",
-    "@angular/platform-browser": "~18.2.0",
-    "@angular/platform-browser-dynamic": "~18.2.0",
-    "@angular/router": "~18.2.0",
-    "@nestjs/common": "^10.0.2",
-    "@nestjs/core": "^10.0.2",
-    "@nestjs/platform-express": "^10.0.2",
-    "@nrwl/angular": "^19.8.4",
-    "@nrwl/nest": "^19.8.4",
-    "axios": "^1.6.0",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.14.3",
-
-    "@angular/cdk": "18.2.12",
     "@angular/flex-layout": "^15.0.0-beta.42",
+    "@angular/forms": "~18.2.0",
     "@angular/google-maps": "^18.2.12",
     "@angular/localize": "^18.2.11",
     "@angular/material": "^18.2.12",
     "@angular/material-moment-adapter": "^18.2.12",
+    "@angular/platform-browser": "~18.2.0",
+    "@angular/platform-browser-dynamic": "~18.2.0",
+    "@angular/router": "~18.2.0",
     "@juggle/resize-observer": "^3.4.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "@ngu/carousel": "^18.0.0",
     "@ngx-translate/core": "^16.0.3",
     "@ngx-translate/http-loader": "^16.0.0",
+    "@nrwl/angular": "^19.8.4",
+    "@nrwl/nest": "^19.8.4",
     "angular-calendar": "^0.31.1",
     "angular-in-memory-web-api": "^0.18.0",
     "angular-star-rating": "^7.0.0",
     "apexcharts": "^3.54.1",
+    "axios": "^1.6.0",
     "chart.js": "^4.4.6",
     "core-js": "^3.39.0",
     "date-fns": "^4.1.0",
@@ -56,10 +52,13 @@
     "ngx-quill": "^26.0.9",
     "perfect-scrollbar": "^1.5.6",
     "quill": "^2.0.2",
+    "reflect-metadata": "^0.1.13",
     "resize-observer-polyfill": "^1.5.1",
+    "rxjs": "~7.8.0",
     "rxjs-compat": "^6.6.7",
     "tinycolor2": "^1.6.0",
-    "tslib": "^2.8.1"
+    "tslib": "^2.8.1",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~18.2.0",
@@ -88,6 +87,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/jasmine": "~4.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.0.0",
@@ -96,10 +96,16 @@
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-playwright": "^1.6.2",
+    "jasmine-core": "~4.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
     "nx": "20.0.12",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
@@ -107,14 +113,6 @@
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
-    "webpack-cli": "^5.1.4",
-
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.3.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0"
+    "webpack-cli": "^5.1.4"
   }
 }
