--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@nestjs/typeorm": "^11.0.0"
   }
 }
