--- a/package.json
+++ b/package.json
@@ -114,6 +114,9 @@
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
     "webpack-cli": "^5.1.4",
-    "@nestjs/typeorm": "^11.0.0"
+    "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
+    "@nestjs/jwt": "^11.0.0"
   }
 }
