--- a/nx.json
+++ b/nx.json
@@ -43,10 +43,15 @@
         }
       }
     },
+    "serve-api": {
+      "cache": false,
+      "dependsOn": ["^build"]
+    },
     "e2e-ci--**/*": {
       "dependsOn": ["^build"]
     }
   },
+
   "plugins": [
     {
       "plugin": "@nx/playwright/plugin",
