--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ngx-pagination": "^6.0.3",
     "ngx-quill": "^26.0.9",
     "perfect-scrollbar": "^1.5.6",
+    "pg": "^8.13.1",
     "quill": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "resize-observer-polyfill": "^1.5.1",
@@ -68,8 +69,10 @@
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
     "@eslint/js": "^9.8.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
+    "@nestjs/typeorm": "^11.0.0",
     "@nx/angular": "20.0.12",
     "@nx/devkit": "20.0.12",
     "@nx/eslint": "20.0.12",
@@ -92,6 +95,8 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.0.0",
     "angular-eslint": "^18.3.0",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "concurrently": "^9.1.0",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
@@ -113,10 +118,6 @@
     "tslib": "^2.3.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "^8.0.0",
-    "webpack-cli": "^5.1.4",
-    "@nestjs/typeorm": "^11.0.0",
-    "bcrypt": "^5.1.1",
-    "class-validator": "^0.14.1",
-    "@nestjs/jwt": "^11.0.0"
+    "webpack-cli": "^5.1.4"
   }
 }
