--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/bcrypt": "^5.0.2",
     "@types/jasmine": "~4.0.0",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
