--- a/package.json
+++ b/package.json
@@ -23,33 +23,43 @@
     "@angular/router": "~18.2.0",
     "@juggle/resize-observer": "^3.4.0",
     "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^10.0.2",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.2",
+    "@ng-web-apis/common": "^1.9.0",
     "@ngu/carousel": "^18.0.0",
     "@ngx-translate/core": "^16.0.3",
     "@ngx-translate/http-loader": "^16.0.0",
     "@nrwl/angular": "^19.8.4",
     "@nrwl/nest": "^19.8.4",
+    "@types/jsonwebtoken": "^9.0.8",
     "angular-calendar": "^0.31.1",
     "angular-in-memory-web-api": "^0.18.0",
     "angular-star-rating": "^7.0.0",
     "apexcharts": "^3.54.1",
     "axios": "^1.6.0",
     "chart.js": "^4.4.6",
+    "class-transformer": "^0.5.1",
     "core-js": "^3.39.0",
     "date-fns": "^4.1.0",
     "echarts": "^5.5.1",
     "flag-icons": "^7.2.3",
     "highlight.js": "^11.10.0",
     "hopscotch": "^0.3.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "ng-apexcharts": "^1.12.0",
     "ng2-charts": "^6.0.1",
     "ng2-file-upload": "^7.0.1",
     "ngx-color-picker": "^17.0.0",
+    "ngx-custom-validators": "^11.0.1",
     "ngx-echarts": "^18.0.0",
     "ngx-pagination": "^6.0.3",
     "ngx-quill": "^26.0.9",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "perfect-scrollbar": "^1.5.6",
     "pg": "^8.13.1",
     "quill": "^2.0.2",
@@ -69,7 +79,6 @@
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
     "@eslint/js": "^9.8.0",
-    "@nestjs/jwt": "^11.0.0",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
     "@nestjs/typeorm": "^11.0.0",
@@ -93,6 +102,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/jasmine": "~4.0.0",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.0.0",
     "angular-eslint": "^18.3.0",
