--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
 //      "@erp/auth": ["libs/cl_base/ui/feature/src/index.ts"]
       "@erp/auth": ["modules/ai_base/auth/ui/export.ts"],
-      "@erp/auth-api": ["modules/ai_base/auth/api/export.ts"]
+      "@erp/auth-api": ["modules/ai_base/auth/api/export.ts"],
+      "@erp/config": ["modules/ai_base/config.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
